@@ -1105,3 +1105,8 @@
 
         * Add edje_object_message_signal_process before edje_object_size_min_restricted_calc.
         If the min size is changed by edje signal in edc, the the function should be called before the calculation.
+
+2013-03-05 Jiyoun Park
+
+        * Fix elm_conform didn't change indicator mode when create.
+
